--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "js-base64": "^3.7.2",
+    "pako": "^2.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
+    "use-fit-text": "^2.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +41,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.4.0",
+    "@types/pako": "^1.0.3",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "react-scripts": "^5.0.0",
+    "tailwindcss": "^3.0.18"
   }
 }
