--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bingo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jgke.github.io/bingo/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
